# drone-swarm-search

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PygameRecord.py  README.md  advanced_env.py  analise_resultados.ipynb  analise_resultados_parte2.ipynb  barth.py  basic_coverage.py  basic_env.py  basic_env2.py  codemeta.json  comparison.py  config.py  docker-compose.yml  dqn.py  dqn_trained.py  dqn_weights_multi.h5  drawProbabilityMatrix.py  example_creating_dataset.py  greedy_search.py  jj_rllib_ppo_mlp.py  main.py  main_dqn.py  only_one.py  package-lock.json  package.json  paper-requirements.md  paper.bib  paper.md  ppo_trainer.py  pyproject.toml  qlearning.py  qlearning_train.py  random_matrix.py  (+17 more)
%USERPROFILE%/.pyenv/pyenv_win-3.1.1.dist-info/: RECORD
.github/workflows/: deploy.yml  draft-pdf.yml  env.yml  pipy_release.yml  tests_env.yml
DSSE/: README.md  __init__.py
DSSE/core/environment/: env.py
DSSE/environment/: advanced_coverage_env.py  constants.py  coverage_env.py  drone.py  env.py  env_base.py  person.py  pygame_interface.py  time_step.py
DSSE/environment/entities/: drone.py  person.py  recharge_base.py
DSSE/environment/generator/: circle.py  dynamic_probability.py  person_movement.py
DSSE/environment/simulation/: H5DatasetBuilder.py  dynamic_particle_simulation.py  dynamic_probability.py  particle_interface.py  particle_sim.py  particle_simulation.py  time_step.py
DSSE/environment/wrappers/: __init__.py  all_flatten_wrapper.py  all_positions_wrapper.py  communication_wrapper.py  gaussian_wrapper.py  matrix_encode_wrapper.py  retain_drone_pos_wrapper.py  top_n_cells_wrapper.py
DSSE/tests/: drone_policy.py  matrix.npy  test_env.py  test_env_coverage.py  test_matrix.py
core/: __init__ 2.py  array_visualization.py  calculate_array_movements.py  create_map.py  create_movement_matrix.py  create_probability_matrix.py  create_random_matrix.py  drawProbabilityMatrix.py  draw_map.py  draw_probability_matrix.py  draw_search_animation.py  matrix_visualization.py  random_matrix.py
core/algorithms/baseline/: parallel_sweep.py  parallel_sweep_single.py  single_parallel_sweep.py
core/environment/: constants.py  env.py  pygame_interface.py
core/tests/: test_env.py
data/: nn_10_10.pt  nn_10_10_1.pt  nn_10_10_2.pt  nn_20_20.pt  nn_5_5_2.pt  statistics_10_10.csv  statistics_10_10_1.csv  statistics_10_10_1_LU.csv  statistics_10_10_2.csv
docs/: about.md  buildInFunctions.md  docs.md  docsAlgorithms.md  docsCoverage.md  environment.md  generalInfo.md  index.md  quickStart.md
docs/.vitepress/: config.mts
docs/Documentation/: docsAlgorithms.md  docsCoverage.md  docsSearch.md
docs/OurStory/: ourStory.md
docs/QuickStart/: index.md  quickStart.md
logs/20250524_170622/: metrics.csv
logs/20250524_170734/: metrics.csv
logs/20250524_170942/: hyperparameters.json  metrics.csv
logs/20250524_171128/: metrics.csv
logs/20250524_185127/: metrics.csv
logs/20250524_185521/: hyperparameters.json
logs/20250525_092915/: hyperparameters.json  metrics.csv
logs/20250525_110350/: metrics.csv
results/: statistics.csv  statistics_10_10.csv  statistics_50_50.csv
scripts/: __init__.py
test/: test_random_matrix.py
tests/: test_calculate_array_movements.py  test_create_map.py  test_create_probability_matrix.py  test_movement_matrix.py  test_probability_matrix.py  test_random_matrix.py
tests/algorithms/: __init__ 2.py
(+290 files in other folders)
