[tool.poetry]
name = "drone-swarm-search"
version = "0.1.0"
description = ""
authors = ["leonardodma <leonardodma@al.insper.edu.br>"]
readme = "README.md"
packages = [
    { include = "scripts" },
    { include = "core" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.6.3"

[tool.poetry.scripts]
test = 'scripts:poetry_test'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
